fixed social icons spacing

--- a/styles2.css
+++ b/styles2.css
@@ -459,7 +459,7 @@ nav ul li {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-left: 3rem;
+  margin-left: 4rem;
 }
 
 .social-links-title {
@@ -480,7 +480,7 @@ nav ul li {
   width: 30px;
   height: 30px;
   opacity: 0.5;
-  margin-right: 1rem;
+  margin-right: 2rem;
   transition: 0.2s;
 }
 
@@ -626,6 +626,10 @@ footer {
     max-width: max-content;
   }
 
+  .about-more-container {
+    margin: 0;
+  }
+
   .projects-container {
     flex-direction: column;
   }
@@ -726,10 +730,14 @@ footer {
   }
 
   .social-links-container {
-    margin-left: 1rem;
+    margin-left: 2rem;
   }
 
   .social-links-title {
     margin-left: 0;
+  }
+
+  .social-img {
+    margin-right: 2rem;
   }
 }
